link to slides and blog post

--- a/slides.html
+++ b/slides.html
@@ -30,8 +30,8 @@
 https://lgatto.github.io           University of Cambridge
 lg390@cam.ac.uk                    @lgatt0</code></pre>
 <ul>
-<li>Slides:</li>
-<li>Blog post:</li>
+<li>Slides: <a href="http://bit.ly/20170925OSEPFL" class="uri">http://bit.ly/20170925OSEPFL</a></li>
+<li>Blog post: <a href="https://lgatto.github.io/EPFL-open-science/" class="uri">https://lgatto.github.io/EPFL-open-science/</a></li>
 </ul>
 </section>
 <section id="licence" class="slide level2">
@@ -275,6 +275,10 @@ The primary value proposition of <a href="https://twitter.com/hashtag/openscienc
 <li>There’s more than one open.</li>
 <li>You want to do more. Yes please!</li>
 </ul>
+</section>
+<section id="section-8" class="slide level2">
+<h2></h2>
+<p><strong>Acknowledgements:</strong> I have been influenced by many throughout my ongoing journey towards better (open) research. I would like to thank some of those that have inspired me, either directly or indirectly, along the way. In no particular order, I would like to thank <a href="http://corinalogan.com/">Corina Logan</a>, <a href="https://twitter.com/StephenEglen">Stephen Eglen</a>, <a href="https://twitter.com/martateperek">Marta Teperek</a>, <a href="https://twitter.com/dannykay68">Danny Kingsley</a>, members of the <a href="http://www.openconcam.org/">OpenConCam group</a>, <a href="https://twitter.com/sr120">Steve Russel</a>, <a href="https://twitter.com/yvonnenobis">Yvonne Nobis</a>, <a href="http://bjoern.brembs.net/">Bjoern Brembs</a>, <a href="http://www.michaeleisen.org/blog/">Micheal Eisen</a>, <a href="https://twitter.com/petermurrayrust">Peter Murray-Rust</a>, <a href="https://twitter.com/rupertgatti">Rupert Gatti</a>, <a href="https://gowers.wordpress.com/">Tim Gowers</a>, the <a href="https://bioconductor.org/">Bioconductor project</a>, the <a href="https://www.software.ac.uk/">Software Suistainability Institute</a>, <a href="https://twitter.com/gvwilson">Greg Wilson</a> and the <a href="https://software-carpentry.org/">Software/Data Carpentry</a>. And probably many more.</p>
 </section>
 
   <!--
