--- a/slides.html
+++ b/slides.html
@@ -107,13 +107,13 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 <section id="but-then" class="slide level2">
 <h2>But then…</h2>
 <blockquote>
-<p>Why wouldn’t anyone be an open research anyway?</p>
+<p>Why wouldn’t anyone want to do open research?</p>
 </blockquote>
 </section>
 <section id="why-isnt-it-open" class="slide level2">
 <h2>Why isn’t it open?</h2>
 <blockquote>
-<p>If <em>research is the by-product of researchers getting promoted</em> ( David Barron),, then shouldn’t we, early career researchers (ECRs), focus on promotion and being docile academic citizens rather than aiming for the more nobel cause of pursuing research to understand the world that surrounds us, and disseminate our findings using modern channels?</p>
+<p>If <em>research is the by-product of researchers getting promoted</em> ( David Barron), then shouldn’t we, early career researchers (ECRs), focus on promotion and being docile academic citizens rather than aiming for the more nobel cause of pursuing research to understand the world that surrounds us, and disseminate our findings using modern channels?</p>
 </blockquote>
 </section>
 <section id="section-2" class="slide level2">
@@ -225,8 +225,8 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 <section id="my-ideal-review-system" class="slide level2">
 <h2>My <em>ideal</em> review system</h2>
 <ol type="1">
-<li><p>Submit your data to a repository, where it get’s checked (by specialists, data scientists, data curators) for quality, annotation, meta-data.</p></li>
-<li><p>Submit your research with a link to the peer reviewed data. First review the intro and methods, then only the results (to avoid positive results bibs).</p></li>
+<li>Submit your data to a repository, where it get’s checked (by specialists, data scientists, data curators) for quality, annotation, meta-data.</li>
+<li>Submit your research with a link to the peer reviewed data. First review the intro and methods, then only the results (to avoid positive results bibs).</li>
 </ol>
 </section>
 <section id="be-reproducible" class="slide level2">
