--- a/slides.html
+++ b/slides.html
@@ -56,7 +56,7 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 <section id="introduction" class="slide level2">
 <h2>Introduction</h2>
 <ul>
-<li>Earcy Career recearchers (ECRs) - <strong>we</strong></li>
+<li>Early Career recearchers (ECRs) - <strong>we</strong></li>
 <li>Open is a gateway to better research</li>
 <li>Open Reseach/Science</li>
 </ul>
@@ -72,7 +72,7 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 </section>
 <section id="what-is-open-research" class="slide level2">
 <h2>What is open research?</h2>
-<p>Any research output is</p>
+<p>Any research output should be</p>
 <ul>
 <li>free to access (read)</li>
 <li>free to use/re-use/mine</li>
@@ -113,7 +113,7 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 <section id="why-isnt-it-open" class="slide level2">
 <h2>Why isn’t it open?</h2>
 <blockquote>
-<p>If <em>research is the by-product of researchers getting promoted</em> ( David Barron), then shouldn’t we, early career researchers (ECRs), focus on promotion and being docile academic citizens rather than aiming for the more nobel cause of pursuing research to understand the world that surrounds us, and disseminate our findings using modern channels?</p>
+<p>If <em>research is the by-product of researchers getting promoted</em> (David Barron), then shouldn’t we, early career researchers (ECRs), focus on promotion and being docile academic citizens rather than aiming for the more nobel cause of pursuing research to understand the world that surrounds us, and disseminate our findings using modern channels?</p>
 </blockquote>
 </section>
 <section id="section-2" class="slide level2">
@@ -247,7 +247,7 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 <ul>
 <li>Sign the Declaration on Research Assessment (<a href="http://www.ascb.org/dora/">DORA</a>)</li>
 <li>Positively value the commitment of open research and publishing practices</li>
-<li>Endorse immediate open publishing and 100% OA, and pre-print</li>
+<li>Endorse immediate open publishing and 100% OA, and pre-prints</li>
 <li>Endorse, support and promote the open publication of data and other scientific outputs such as software.</li>
 <li>Educate researchers about publishing practices</li>
 <li>Be transparent about costs of publishing</li>
