--- a/slides2.html
+++ b/slides2.html
@@ -30,7 +30,7 @@
 https://lgatto.github.io           University of Cambridge
 lg390@cam.ac.uk                    @lgatt0</code></pre>
 <ul>
-<li>Slides: <a href="http://bit.ly/20170925OSEPFLshort" class="uri">http://bit.ly/20170925OSEPFLshort</a></li>
+<li>Slides: <a href="http://bit.ly/20170925OSevening" class="uri">http://bit.ly/20170925OSevening</a></li>
 <li>Blog post: <a href="https://lgatto.github.io/EPFL-open-science/" class="uri">https://lgatto.github.io/EPFL-open-science/</a></li>
 </ul>
 </section>
