--- a/slides2.html
+++ b/slides2.html
@@ -101,10 +101,10 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 <li>Sytemic control and inertia</li>
 <li>Vested interests by people in charge</li>
 <li>Abuse of power dynamics</li>
-<li>(Preceived) fear of being scooped, or not being credited</li>
-<li>(Preceived) fear of errors and public humiliation, risk for reputation</li>
-<li>(Preceived) fear of information overload</li>
-<li>(Preceived) fear of becoming less competitive in a overcompetitive market!</li>
+<li>(Perceived) fear of being scooped, or not being credited</li>
+<li>(Perceived) fear of errors and public humiliation, risk for reputation</li>
+<li>(Perceived) fear of information overload</li>
+<li>(Perceived) fear of becoming less competitive in a over-competitive market!</li>
 <li>…</li>
 </ul>
 </section>
