--- a/slides2.html
+++ b/slides2.html
@@ -58,7 +58,7 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 <ul>
 <li>Laurent Gatto: ECR, non-established research staff, PI</li>
 <li>Reproducible research, computational research, data, research software</li>
-<li>Open scholar, and convinved that open is a gateway to better research</li>
+<li>Open scholar, and convinced that open is a gateway to better research</li>
 </ul>
 </section>
 <section id="what-is-open-researchscience" class="slide level2">
@@ -92,13 +92,13 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 <blockquote>
 <p>Why wouldn’t anyone want to do open research?</p>
 </blockquote>
-<p>If <em>research is the by-product of researchers getting promoted</em> (David Barron), then shouldn’t we, early career researchers (ECRs), focus on promotion and being docile academic citizens rather than aiming for the more nobel cause of pursuing research to understand the world that surrounds us, and disseminate our findings using modern channels?</p>
+<p>If <em>research is the by-product of researchers getting promoted</em> (David Barron), then shouldn’t we, early career researchers (ECRs), focus on promotion and being docile academic citizens rather than aiming for the more noble cause of pursuing research to understand the world that surrounds us, and disseminate our findings using modern channels?</p>
 </section>
 <section id="section-3" class="slide level2">
 <h2></h2>
 <p>Barriers are not technological, but rather socio-cultural and political.</p>
 <ul>
-<li>Sytemic control and inertia</li>
+<li>Systemic control and inertia</li>
 <li>Vested interests by people in charge</li>
 <li>Abuse of power dynamics</li>
 <li>(Perceived) fear of being scooped, or not being credited</li>
@@ -110,7 +110,7 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 </section>
 <section id="go-open" class="slide level2">
 <h2>Go OPEN!</h2>
-<p>Open science/research is particularly important for ERCs. Open research practices are here, and won’t go away. It is clear that they will increase in the near future. If <em>you</em>, as an ECR, want to be a competitive researcher in the coming years (and you’ll need to be), you’ll need to be well versed in open research practices.</p>
+<p>Open science/research is particularly important for ECRs. Open research practices are here, and won’t go away. It is clear that they will increase in the near future. If <em>you</em>, as an ECR, want to be a competitive researcher in the coming years (and you’ll need to be), you’ll need to be well versed in open research practices.</p>
 </section>
 <section id="incentives" class="slide level2">
 <h2>Incentives</h2>
