--- a/slides.html
+++ b/slides.html
@@ -87,7 +87,7 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 <h2>Open vs. closed?</h2>
 <p>Mertonian norms of Science (1942)</p>
 <ul>
-<li><strong>universalism</strong>, <strong>communalism</strong>, <strong>disinterestedness</strong>, <strong>organized scepticism</strong></li>
+<li><strong>universalism</strong>, <strong>communalism</strong>, <strong>disinterestedness</strong>, <strong>organised scepticism</strong></li>
 </ul>
 <p>Are these imperatives in line with current practice?</p>
 </section>
