fixing, updating, improving

--- a/slides2.html
+++ b/slides2.html
@@ -90,7 +90,7 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 <section id="but-then" class="slide level2">
 <h2>But then…</h2>
 <blockquote>
-<p>Why wouldn’t anyone want to do open research?</p>
+<p>Why would anyone not want to do open research?</p>
 </blockquote>
 <p>If <em>research is the by-product of researchers getting promoted</em> (David Barron), then shouldn’t we, early career researchers (ECRs), focus on promotion and being docile academic citizens rather than aiming for the more noble cause of pursuing research to understand the world that surrounds us, and disseminate our findings using modern channels?</p>
 </section>
