fixing, updating, improving

--- a/slides.html
+++ b/slides.html
@@ -190,15 +190,15 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 <h2>We still need more</h2>
 <p>But, let’s face it, in practice, it is currently still relatively easy to brush over many of these requirements. In addition, the incentives are still inconsequential compared to the (perceived) risks. Maybe we need more threads when not being open.</p>
 </section>
-<section id="what-can-we-do-as-ecr" class="slide level2">
-<h2>What can we do as ECR?</h2>
+<section id="what-can-we-do" class="slide level2">
+<h2>What can we do?</h2>
 </section>
 <section id="build-openness-at-the-core-your-research" class="slide level2">
 <h2>Build openness at the core your research</h2>
 <ul>
 <li>Many aspects of open research, and arguable the most important ones, can’t be implemented as an afterthought.</li>
 <li><a href="http://osc.cam.ac.uk/open-research/open-research-pilot-project">Open Research Pilot Project</a> with the Wellcome Trust and OSC in Cambridge</li>
-<li><em>SpatialMap</em> - <a href="https://github.com/SpatialMap/SpatialMapDev">GitHub repository</a> - <a href="https://lgatto.github.io/spatialmap-proposal/">Grant proposal blog</a></li>
+<li><em>SpatialMap</em>: sharing data - <a href="https://github.com/SpatialMap/SpatialMapDev">GitHub repository</a> - <a href="https://lgatto.github.io/spatialmap-proposal/">Grant proposal blog</a></li>
 </ul>
 </section>
 <section id="promoting-open-research-through-peer-review" class="slide level2">
