--- a/slides2.html
+++ b/slides2.html
@@ -126,8 +126,8 @@ lg390@cam.ac.uk                    @lgatt0</code></pre>
 <h2>We still need more</h2>
 <p>But, let’s face it, in practice, it is currently still relatively easy to brush over many of these requirements. In addition, the incentives are still inconsequential compared to the (perceived) risks. Maybe we need more threads when not being open.</p>
 </section>
-<section id="what-can-we-do-as-ecr" class="slide level2">
-<h2>What can we do as ECR?</h2>
+<section id="what-can-we-do" class="slide level2">
+<h2>What can we do?</h2>
 <ul>
 <li>Build openness at the core your research</li>
 <li>Promoting open research through peer review: not data, no review</li>
